--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./images/icono.png">
-    <title>Liga de Quito | TIenda Virtual</title>
+    <title>Liga de Quito | Tienda Virtual</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header" id="home">
         <div class="menu container">
             <a href="#" class="logo">LDU</a>
             <input type="checkbox" id="menu"/>
             <label for="menu">
-                <img src="./images/menu.png" class="menu-icono"  alt="menu">
+                <img src="images/menu.png" class="menu-icono"  alt="menu">
             </label>
             <nav class="navbar">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
                     <li><a href="#lista-1">Shop</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
             <div>
@@ -60,31 +60,31 @@
     <section class="ofert container">
         <div class="ofert-1">
             <div class="ofert-img">
-                <img src="images/f1.png" alt="">
+                <img src="images/llavero.jpg" alt="">
             </div>
             <div class="ofert-txt">
-                <h3>Producto 1</h3>
-                <a href="#" class="btn-2">Informacion</a>
+                <h3>Llavero Destapador</h3>
+                <a href="#" class="btn-2">Comprar</a>
             </div>
         </div>
 
         <div class="ofert-1">
             <div class="ofert-img">
-                <img src="images/f2.png" alt="">
+                <img src="images/llavero-recopa.jpg" alt="">
             </div>
             <div class="ofert-txt">
-                <h3>Producto 2</h3>
-                <a href="#" class="btn-2">Informacion</a>
+                <h3>Llavero Recopa</h3>
+                <a href="#" class="btn-2">Comprar</a>
             </div>
         </div>
 
         <div class="ofert-1">
             <div class="ofert-img">
-                <img src="images/f3.png" alt="">
+                <img src="images/coleccion-copas-conmebol.jpg" alt="">
             </div>
             <div class="ofert-txt">
-                <h3>Producto 3</h3>
-                <a href="#" class="btn-2">Informacion</a>
+                <h3>Colección 3 Copas Conmebol</h3>
+                <a href="#" class="btn-2">Comprar</a>
             </div>
         </div>
     </section>
@@ -156,8 +156,8 @@
                 <img src="images/i1.svg" alt="">
             </div>
             <div class="icon-txt">
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                <p>amet consectetur adipisicing elit.</p>
+                <h3>chompas</h3>
+                <p>Productos</p>
             </div>
         </div>
 
@@ -166,8 +166,8 @@
                 <img src="images/i2.svg" alt="">
             </div>
             <div class="icon-txt">
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                <p>amet consectetur adipisicing elit.</p>
+                <h3>Camisetas</h3>
+                <p>Productos</p>
             </div>
         </div>
 
@@ -176,66 +176,54 @@
                 <img src="images/i3.svg" alt="">
             </div>
             <div class="icon-txt">
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                <p>amet consectetur adipisicing elit.</p>
+                <h3>Accesorios</h3>
+                <p>Productos</p>
             </div>
         </div>
     </section>
 
     <section class="blog container">
         <div class="blog-1">
-            <img src="images/b1.jpg" alt="">
-            <h3>Blog 1</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nisi magnam laboriosam consequuntur, iusto deleniti soluta corrupti dolores dolorem quia sit expedita ex eius molestias reiciendis error necessitatibus placeat. Dolorum.</p>
+            <img src="images/Campeon_Sudamericana.jpg" alt="">
+            <h3>Campeón Sudamericana 2023</h3>
+            <p>Liga de Quito se consagró campeón de la CONMEBOL Sudamericana, al vencer 4-3 por penales a Fortaleza de Brasil, en un partido en el que el equipo ecuatoriano nunca se dio por vencido.</p>
         </div>
         <div class="blog-1">
-            <img src="images/b2.jpg" alt="">
-            <h3>Blog 2</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nisi magnam laboriosam consequuntur, iusto deleniti soluta corrupti dolores dolorem quia sit expedita ex eius molestias reiciendis error necessitatibus placeat. Dolorum.</p>
+            <img src="images/Campeon_LigaPro.jpg" alt="">
+            <h3>Campeón Liga Pro 2023</h3>
+            <p>Liga Deportiva Universitaria cierra un año inolvidable. El equipo de Luis Zubeldía consiguió lo imposible: fue campeón de la Copa Sudamericana y de la LigaPro 2023.</p>
         </div>
         <div class="blog-1">
-            <img src="images/b3.jpg" alt="">
-            <h3>Blog 3</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nisi magnam laboriosam consequuntur, iusto deleniti soluta corrupti dolores dolorem quia sit expedita ex eius molestias reiciendis error necessitatibus placeat. Dolorum.</p>
+            <img src="images/Final_2024.jpeg" alt="">
+            <h3>Final de Ida Liga Pro 2024 | LDU 3 - 0 IDV</h3>
+            <p>En la final de ida, Liga de Quito superó por 3-0 a Independiente del Valle, en un partido en el que el campeón vigente fue muy superior.</p>
         </div>
     </section>
 
     <footer class="footer">
         <div class="footer-content conteiner">
             <div class="link">
-                <h3>lorem</h3>
+                <h3>Horarios Tienda Física</h3>
                 <ul>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
+                    <li><a>Lunes a sábado</a></li>
+                    <li><a>10 AM - 12 PM</a></li>
+                    <li><a>13 PM - 19 PM</a></li>
                 </ul>
             </div>
             <div class="link">
-                <h3>lorem</h3>
+                <h3>Dirección</h3>
                 <ul>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
+                    <a>Sector La Carolina - Rumipamba</a>
+                    <li><a href="#">delaligasoy@gmail.com</a></li>
                 </ul>
             </div>
             <div class="link">
-                <h3>lorem</h3>
+                <h3>Links</h3>
                 <ul>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                </ul>
-            </div>
-            <div class="link">
-                <h3>lorem</h3>
-                <ul>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="#lista-1">Shop</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
