--- a/src/page.html
+++ b/src/page.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./images/icono.png">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/images/icono.png">
     <title>Liga de Quito | Tienda Virtual</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
             <a href="#" class="logo">LDU</a>
             <input type="checkbox" id="menu"/>
             <label for="menu">
-                <img src="images/menu.png" class="menu-icono"  alt="menu">
+                <img src="/images/menu.png" class="menu-icono"  alt="menu">
             </label>
             <nav class="navbar">
                 <ul>
@@ -21,12 +21,13 @@
                     <li><a href="nosotros.html">Nosotros</a></li>
                     <li><a href="#lista-1">Shop</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
+                    
                 </ul>
             </nav>
             <div>
                 <ul>
                     <li class="submenu">
-                        <img src="images/car.svg" id="img-carrito" alt="carrito">
+                        <img src="/images/car.svg" id="img-carrito" alt="carrito">
                         <div id="carrito">
                             <table id="lista-carrito">
                                 <thead>
@@ -47,7 +48,7 @@
         </div>
         <div class="header-content container">
             <div class="header-img">
-                <img src="images/piovi.png" alt="">
+                <img src="/images/piovi.png" alt="">
             </div>
             <div class="header-txt">
                 <h1>Nuevos Productos</h1>
@@ -60,7 +61,7 @@
     <section class="ofert container">
         <div class="ofert-1">
             <div class="ofert-img">
-                <img src="images/llavero.jpg" alt="">
+                <img src="/images/llavero.jpg" alt="">
             </div>
             <div class="ofert-txt">
                 <h3>Llavero Destapador</h3>
@@ -70,7 +71,7 @@
 
         <div class="ofert-1">
             <div class="ofert-img">
-                <img src="images/llavero-recopa.jpg" alt="">
+                <img src="/images/llavero-recopa.jpg" alt="">
             </div>
             <div class="ofert-txt">
                 <h3>Llavero Recopa</h3>
@@ -80,7 +81,7 @@
 
         <div class="ofert-1">
             <div class="ofert-img">
-                <img src="images/coleccion-copas-conmebol.jpg" alt="">
+                <img src="/images/coleccion-copas-conmebol.jpg" alt="">
             </div>
             <div class="ofert-txt">
                 <h3>Colección 3 Copas Conmebol</h3>
@@ -93,7 +94,70 @@
         <h2>Productos</h2>
         <div class="product-content">
             <div class="product">
-                <img src="images/aniversario.png" alt="">
+                <img src="/images/oficial_2025.jpg" alt="">
+                <div class="product-txt">
+                    <h3>LDU Oficial 2025</h3>
+                    <p>Camiseta Fútbol Hombre</p>
+                    <p class="precio">$74.99</p>
+                    <a href="#" class="agregar-carrito btn-2" data-id="1">Agregar al Carrito</a>
+                </div>
+            </div>
+            <div class="product">
+                <img src="/images/alterna1_2025.jpg" alt="">
+                <div class="product-txt">
+                    <h3>LDU Alterna 1</h3>
+                    <p>Camiseta Fútbol Hombre</p>
+                    <p class="precio">$74.99</p>
+                    <a href="#" class="agregar-carrito btn-2" data-id="2">Agregar al Carrito</a>
+                </div>
+            </div>
+            <div class="product">
+                <img src="/images/alterna2_2025.jpg" alt="">
+                <div class="product-txt">
+                    <h3>LDU Alterna 2</h3>
+                    <p>Camiseta Fútbol Hombre</p>
+                    <p class="precio">$74.99</p>
+                    <a href="#" class="agregar-carrito btn-2" data-id="3">Agregar al Carrito</a>
+                </div>
+            </div>
+            <div class="product">
+                <img src="/images/oficial_2025_buso.jpg" alt="">
+                <div class="product-txt">
+                    <h3>LDU Oficial 2025</h3>
+                    <p>Buzo Fútbol Hombre</p>
+                    <p class="precio">$79.99</p>
+                    <a href="#" class="agregar-carrito btn-2" data-id="2">Agregar al Carrito</a>
+                </div>
+            </div>
+            <div class="product">
+                <img src="/images/campeon_2024.jpg" alt="">
+                <div class="product-txt">
+                    <h3>LDU Bicampeon</h3>
+                    <p>Camiseta Fútbol Hombre</p>
+                    <p class="precio">$29.99</p>
+                    <a href="#" class="agregar-carrito btn-2" data-id="2">Agregar al Carrito</a>
+                </div>
+            </div>
+            <div class="product">
+                <img src="/images/bicampeon.jpg" alt="">
+                <div class="product-txt">
+                    <h3>LDU Recopa 2024</h3>
+                    <p>Camiseta Fútbol Hombre</p>
+                    <p class="precio">$21.49</p>
+                    <a href="#" class="agregar-carrito btn-2" data-id="3">Agregar al Carrito</a>
+                </div>
+            </div>
+            <div class="product">
+                <img src="/images/bicampeon_chompa.jpg" alt="">
+                <div class="product-txt">
+                    <h3>LDU Recopa 2024</h3>
+                    <p>Buzo Fútbol Hombre</p>
+                    <p class="precio">$50.24</p>
+                    <a href="#" class="agregar-carrito btn-2" data-id="3">Agregar al Carrito</a>
+                </div>
+            </div>
+            <div class="product">
+                <img src="/images/aniversario.png" alt="">
                 <div class="product-txt">
                     <h3>LDU Aniversario 2024</h3>
                     <p>Camiseta Fútbol Hombre</p>
@@ -102,7 +166,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="images/alterna2.png" alt="">
+                <img src="/images/alterna2.png" alt="">
                 <div class="product-txt">
                     <h3>LDU Segunda Equipación</h3>
                     <p>Camiseta Fútbol Hombre</p>
@@ -111,7 +175,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="images/arquero1.png" alt="">
+                <img src="/images/arquero1.png" alt="">
                 <div class="product-txt">
                     <h3>LDU Arquero 2024</h3>
                     <p>Camiseta Fútbol Hombre</p>
@@ -120,7 +184,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="images/arquero2.png" alt="">
+                <img src="/images/arquero2.png" alt="">
                 <div class="product-txt">
                     <h3>LDU Arquero 2024</h3>
                     <p>Camiseta Fútbol Hombre</p>
@@ -129,7 +193,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="images/arquero3.png" alt="">
+                <img src="/images/arquero3.png" alt="">
                 <div class="product-txt">
                     <h3>LDU Arquero 2024</h3>
                     <p>Camiseta Fútbol Hombre</p>
@@ -138,11 +202,29 @@
                 </div>
             </div>
             <div class="product">
-                <img src="images/buzo_entrenamiento.png" alt="">
+                <img src="/images/buzo_entrenamiento.png" alt="">
                 <div class="product-txt">
                     <h3>Buzo de entrenamiento</h3>
                     <p>Buzo Fútbol Hombre</p>
                     <p class="precio">$48.93</p>
+                    <a href="#" class="agregar-carrito btn-2" data-id="6">Agregar al Carrito</a>
+                </div>
+            </div>
+            <div class="product">
+                <img src="/images/buzo_recopa.jpg" alt="">
+                <div class="product-txt">
+                    <h3>Buzo Recopa</h3>
+                    <p>Buzo Fútbol Hombre</p>
+                    <p class="precio">$35.87</p>
+                    <a href="#" class="agregar-carrito btn-2" data-id="6">Agregar al Carrito</a>
+                </div>
+            </div>
+            <div class="product">
+                <img src="/images/mangacorta.jpg" alt="">
+                <div class="product-txt">
+                    <h3>LDU Conmemorativa</h3>
+                    <p>Camiseta Fútbol Hombre</p>
+                    <p class="precio">$17.49</p>
                     <a href="#" class="agregar-carrito btn-2" data-id="6">Agregar al Carrito</a>
                 </div>
             </div>
@@ -153,7 +235,7 @@
     <section class="icons container">
         <div class="icon-1">
             <div class="icon-img">
-                <img src="images/i1.svg" alt="">
+                <img src="/images/i1.svg" alt="">
             </div>
             <div class="icon-txt">
                 <h3>chompas</h3>
@@ -163,7 +245,7 @@
 
         <div class="icon-1">
             <div class="icon-img">
-                <img src="images/i2.svg" alt="">
+                <img src="/images/i2.svg" alt="">
             </div>
             <div class="icon-txt">
                 <h3>Camisetas</h3>
@@ -173,7 +255,7 @@
 
         <div class="icon-1">
             <div class="icon-img">
-                <img src="images/i3.svg" alt="">
+                <img src="/images/i3.svg" alt="">
             </div>
             <div class="icon-txt">
                 <h3>Accesorios</h3>
@@ -184,17 +266,17 @@
 
     <section class="blog container">
         <div class="blog-1">
-            <img src="images/Campeon_Sudamericana.jpg" alt="">
+            <img src="/images/Campeon_Sudamericana.jpg" alt="">
             <h3>Campeón Sudamericana 2023</h3>
             <p>Liga de Quito se consagró campeón de la CONMEBOL Sudamericana, al vencer 4-3 por penales a Fortaleza de Brasil, en un partido en el que el equipo ecuatoriano nunca se dio por vencido.</p>
         </div>
         <div class="blog-1">
-            <img src="images/Campeon_LigaPro.jpg" alt="">
+            <img src="/images/Campeon_LigaPro.jpg" alt="">
             <h3>Campeón Liga Pro 2023</h3>
             <p>Liga Deportiva Universitaria cierra un año inolvidable. El equipo de Luis Zubeldía consiguió lo imposible: fue campeón de la Copa Sudamericana y de la LigaPro 2023.</p>
         </div>
         <div class="blog-1">
-            <img src="images/Final_2024.jpeg" alt="">
+            <img src="/images/Final_2024.jpeg" alt="">
             <h3>Final de Ida Liga Pro 2024 | LDU 3 - 0 IDV</h3>
             <p>En la final de ida, Liga de Quito superó por 3-0 a Independiente del Valle, en un partido en el que el campeón vigente fue muy superior.</p>
         </div>
@@ -228,6 +310,6 @@
             </div>
         </div>
     </footer>
-    <script src="scrip.js"></script>
+    <script src="/scrip.js"></script>
 </body>
 </html>
